<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    tools:context=".color.ColorFragment"
    tools:showIn="@layout/activity_main">

    <TextView
        style="@style/Title.SeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/title_red" />

    <SeekBar
        android:id="@+id/seek_bar_color_red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/seek_bar_margin_bottom"
        android:max="200"
        android:min="0"
        android:progressDrawable="@drawable/seek_bar_progress"
        android:thumb="@drawable/seek_bar_thumb" />

    <TextView
        style="@style/Title.SeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_green" />

    <SeekBar
        android:id="@+id/seek_bar_color_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/seek_bar_margin_bottom"
        android:max="200"
        android:min="0"
        android:progressDrawable="@drawable/seek_bar_progress"
        android:thumb="@drawable/seek_bar_thumb" />

    <TextView
        style="@style/Title.SeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_blue" />

    <SeekBar
        android:id="@+id/seek_bar_color_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/seek_bar_margin_bottom"
        android:max="200"
        android:min="0"
        android:progressDrawable="@drawable/seek_bar_progress"
        android:thumb="@drawable/seek_bar_thumb" />
</LinearLayout>